--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
+:root {
+  /* Primary */
+
+  --Light-Cyan: hsl(193, 38%, 86%);
+  --Neon-Green: hsl(150, 100%, 66%);
+
+  /* ### Neutral */
+
+  --Grayish-Blue: hsl(217, 19%, 38%);
+  --Dark-Grayish-Blue: hsl(217, 19%, 24%);
+  --Dark-Blue: hsl(218, 23%, 16%);
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Manrope", sans-serif;
+}
+
 .App {
-  text-align: center;
+  background-color: var(--Dark-Blue);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.advice {
+  border-radius: 10px;
+  position: relative;
+  padding: 20px;
+  min-height: 300px;
+  max-height: 300px;
+  min-width: 300px;
+  max-width: 300px;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: var(--Dark-Grayish-Blue);
+}
+
+.advice h1 {
+  margin-top: 20px;
+  font-size: 28px;
+  color: var(--Light-Cyan);
+}
+
+.advice button {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: absolute;
+  bottom: -35px;
+  background-color: var(--Neon-Green);
+  width: 70px;
+  height: 70px;
+  border: none;
+  border-radius: 50%;
 }
 
-.App-link {
-  color: #61dafb;
+.advice button:hover{
+  cursor: pointer;
+  box-shadow: 0px 0px 20px var(--Neon-Green);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+#divider {
+  margin-top: 20px;
+  width: 80%;
+}
+
+.hr {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.hr hr {
+  border: none;
+  height: 1px;
+  background-color: var(--Grayish-Blue);
+}
+
+h3 {
+  margin-top: 20px;
+  color: var(--Neon-Green);
+}
+
+@media (min-width: 800px) {
+  .advice {
+    min-width: 600px;
+    max-width: 600px;
   }
 }
